tests/type-reconstruction/ill-typed/references/references-3.stella
language core;

extend with #general-recursion;
extend with #references;
extend with #type-reconstruction;

fn swap(p : auto) -> auto {
  return if p then p else *swap(true)
}

fn main(x : auto) -> auto {
  return swap(x)
}